# mcp-camara-demo

./: main.go
mix_server/: main.py  pyproject.toml  server.py
mix_server/tools/: network_slicing.py
mix_server/utils/: NetworkSliceBooking.yaml  api_definitions.py
mix_server_sample/: README.md  generate_parquet.py  main.py  pyproject.toml
mix_server_sample/tools/: csv_tools.py  parquet_tools.py
mix_server_sample/utils/: file_reader.py
