[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonref>=1.1.0",
    "jsonschema>=4.24.0",
    "mcp[cli]>=1.9.2",
    "openapi>=2.0.0",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.1",
    "pyyaml>=6.0.2",
]
